--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+$myColor:lightseagreen;
 @mixin expandBar {
   animation-name: expandBar;
       animation-duration: 2s;
@@ -32,15 +33,12 @@ body {
   
   *::-webkit-scrollbar-thumb {
     background: transparent;
-    
   }
-  
-  
- nav{
+
+nav{
      display: flex;
-     justify-content: space-between;
-  
- }
+     justify-content: space-between;  
+}
   
   #overlay-button {
     position: fixed;
@@ -49,12 +47,12 @@ body {
     padding: 26px 11px;
     z-index: 2;
     cursor: pointer;
-    // user-select: none;
+   
     span {
         height: 4px;
         width: 35px;
         border-radius: 2px;
-        background-color: rgb(238, 5, 5);
+        background-color:$myColor;
         position: relative;
         display: block;
         transition: all .2s ease-in-out;
@@ -69,7 +67,7 @@ body {
             height: 4px;
             width: 35px;
             border-radius: 2px;
-            background-color: rgb(223, 18, 18);
+            background-color: $myColor;
             position: absolute;
             content: "";
             transition: all .2s ease-in-out;
@@ -108,11 +106,10 @@ body {
     padding-bottom: 10px;
     height: 250px;
     width: 100vw;
-    background: #e98d8d;
+    background:$myColor ;
    z-index: 1;
     visibility: hidden;
     position: fixed;
-    
     
     &.active {
       visibility: visible;
@@ -158,7 +155,7 @@ body {
       font-size: 48px;
     }
     span {
-      color: lightseagreen;
+      color: $myColor;
     }
 
 }
@@ -194,17 +191,8 @@ body {
   }
 }
 
-
-
-
-
-
-
-
-
-
 #about{
-  
+margin-top: 40px; 
 height: 100vh;
 display: flex;
 justify-content: center;
@@ -218,8 +206,7 @@ background-size: cover;
     font-weight: bolder;
     opacity: 0.6;
     padding: 10px;
-    
-   
+      
     }
     .profil{
         display: flex;
@@ -227,21 +214,17 @@ background-size: cover;
         align-items: center;
         i{
         font-size: 400px;
-        color: rgb(54, 138, 138);
+        color: $myColor;
         
          }
-      
-        
-  
-        
-    }
+      }
 
 }
 #my-skills{
     height: 110vh;
     background-image: url(./img/raychan-e_J7i3eQEfo-unsplash.jpg);
     background-repeat: no-repeat;
-   
+    margin-top: 40px;
     background-size: cover;
     display: grid;
     grid-template-columns: 32px auto;
@@ -308,9 +291,6 @@ background-size: cover;
         background:linear-gradient(to  right, rgb(161, 112, 190), rgb(163, 8, 202) 90%, transparent 7%);
         @include expandBar;
     }
-  
-
-
 
 #my-projects {
   height: 170vh;
@@ -323,9 +303,8 @@ background-size: cover;
   flex-direction: column;
   padding-left: 20px;
 
-
   .card {
-  background-color: rgb(172, 224, 233);
+  background-color: rgb(208, 218, 154);
   margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -336,7 +315,7 @@ background-size: cover;
       img {
    border-radius: 5px 5px 0 0;
    width: 100%;
-   height: 200px;
+  
  }
  &:hover {
   box-shadow: 15px 8px 16px 0 rgba(0,0,0,0.2);
@@ -396,7 +375,6 @@ background-size: cover;
     }
  }
 }
- 
 }
 
 #contact{
@@ -451,7 +429,7 @@ footer{
     font: normal 36px 'Open Sans', cursive;
     margin: 0;
     span{
-      color:  lightseagreen;
+      color:  $myColor;
     }
 
   }
@@ -471,7 +449,6 @@ footer{
 
   }
   
-
   .footer-left{
     display: inline-block;
     vertical-align: top;
@@ -507,12 +484,9 @@ footer{
       font-weight: normal;
       margin: 0;
     }
+}
 
-
-  }
-
-
- .footer-center{
+.footer-center{
 	display: inline-block;
 	vertical-align: top;
   width: 35%;
@@ -548,7 +522,7 @@ footer{
       line-height:2;
     }
     a{
-      color:  lightseagreen;
+      color:  $myColor;
       text-decoration: none;;
     }
   }
@@ -579,9 +553,7 @@ footer{
         transform: scale(1.4) ;
           }
     }
-  
   }
-
 }
 
 
@@ -622,16 +594,6 @@ footer{
 
 }
 
-
-   
- 
-
-
-
-
-
-
-
   @media (min-width:767px){
 .background-img{
   z-index: 1;
@@ -645,11 +607,11 @@ footer{
       
     }
     *::-webkit-scrollbar {
-      width: 16px;
+      width: 12px;
     }
     
     *::-webkit-scrollbar-track {
-      background:#e98d8d;
+      background:$myColor;
       border-radius: 20px;
     }
     
@@ -669,37 +631,27 @@ footer{
         width: 10%;
         height: 100%;
          z-index: 2;
-        
-       
+          
     }
     #about{
        flex-direction: row;
        align-items: space-around;
         .profil{
             margin-left: 20px;
-       
-          
-        }
-
+       }
     }
     #my-projects{
-      height: 100vh;
+      height: 60vh;
       .cards{
         flex-direction: row;
       .card{
         width: 33%;
         margin: 20px;
       }
-}
+    }
   }
   footer {
     width: 90%;
     margin-left: 10%
-   
-
-
-
-
   }
-
 }
